# airflow-kubernetes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
dags/: .airflowignore  Pipfile  README.md  hello_world.py  openshift_nightlies.py  requirements.txt  setup.cfg  tox.ini
dags/baremetal_openshift/: README.md  dag.py  manifest.yaml
dags/baremetal_openshift/scripts/: run_benchmark.sh  scaleup_cluster.sh
dags/baremetal_openshift/util/: constants.py  kubeconfig.py  var_loader.py
dags/common/models/: dag_config.py
dags/common/util/: slack_integration.py  var_loader.py
dags/helloworld/: hello_world.py
dags/nocp/: README.md  dag.py  manifest.yaml
dags/nocp/docs/: nocp_benchmarks.md
dags/nocp/scripts/: run_ocm_api_load.sh  run_ocm_benchmark.sh
dags/nocp/util/: constants.py  manifest.py  var_loader.py
dags/openshift_nightlies/: README.md  __init__.py  dag.py  dagv2.py  manifest.json  manifest.yaml  openshift_nightlies.py
dags/openshift_nightlies/docs/: manifest_and_releases.md  secrets.md  tasks.md  variables.md
dags/openshift_nightlies/files/: cerberus.yml  full.json  hold.json
dags/openshift_nightlies/models/: __init__.py  dag_config.py  release.py
dags/openshift_nightlies/scripts/: index.sh  install_cluster.sh  new_index.sh  run_benchmark.sh  run_scale-ci-diagnosis.sh
dags/openshift_nightlies/tasks/: benchmarks.py  install_cluster.py
dags/openshift_nightlies/util/: __init__.py  (+9 more)
dags/reports/: README.md  config.yaml  dag.py  util.py
dags/tests/: conftest.py
dags/vars/: common.json
(+445 files in other folders)
