# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = openshift-dags
description = To run benchmarks against openshift/kubernetes from Airflow
author = red-hat-performance
author_email = perf-dept@redhat.com
license = Apache License 2.0
long_description = file: README.md
long_description_content-type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
version = 0.0.1
home-page = https://github.com/cloud-bulldozer/benchmark-operator/cli

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-mock
    pytest-env
    requests-mock
[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1
